--- a/user/templates/user/gallary.html
+++ b/user/templates/user/gallary.html
@@ -15,7 +15,7 @@
             <div class="sgallary1">
               <div class="gallary">
                 <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
                 /></a>
                 <div class="des">Description if any</div>
               </div>
@@ -26,7 +26,7 @@
             <div class="sgallary1">
               <div class="gallary">
                 <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
                 /></a>
                 <div class="des">Description if any</div>
               </div>
@@ -37,7 +37,7 @@
             <div class="sgallary1">
               <div class="gallary">
                 <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
                 /></a>
                 <div class="des">Description if any</div>
               </div>
@@ -48,53 +48,7 @@
             <div class="sgallary1">
               <div class="gallary">
                 <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
-                /></a>
-                <div class="des">Description if any</div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="sgallary1">
-              <div class="gallary">
-                <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
-                /></a>
-                <div class="des">Description if any</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="sgallary1">
-              <div class="gallary">
-                <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
-                /></a>
-                <div class="des">Description if any</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="sgallary1">
-              <div class="gallary">
-                <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
-                /></a>
-                <div class="des">Description if any</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6 col-xs-12">
-            <div class="sgallary1">
-              <div class="gallary">
-                <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
                 /></a>
                 <div class="des">Description if any</div>
               </div>
@@ -107,7 +61,7 @@
             <div class="sgallary1">
               <div class="gallary">
                 <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
                 /></a>
                 <div class="des">Description if any</div>
               </div>
@@ -118,7 +72,7 @@
             <div class="sgallary1">
               <div class="gallary">
                 <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
                 /></a>
                 <div class="des">Description if any</div>
               </div>
@@ -129,7 +83,7 @@
             <div class="sgallary1">
               <div class="gallary">
                 <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
                 /></a>
                 <div class="des">Description if any</div>
               </div>
@@ -140,7 +94,53 @@
             <div class="sgallary1">
               <div class="gallary">
                 <a href="img/1.jpg"
-                  ><img src="images/f.jpg" alt="wait" width="300" height="200"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
+                /></a>
+                <div class="des">Description if any</div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="sgallary1">
+              <div class="gallary">
+                <a href="img/1.jpg"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
+                /></a>
+                <div class="des">Description if any</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="sgallary1">
+              <div class="gallary">
+                <a href="img/1.jpg"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
+                /></a>
+                <div class="des">Description if any</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="sgallary1">
+              <div class="gallary">
+                <a href="img/1.jpg"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
+                /></a>
+                <div class="des">Description if any</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3 col-sm-6 col-xs-12">
+            <div class="sgallary1">
+              <div class="gallary">
+                <a href="img/1.jpg"
+                  ><img src="{% static 'images/f.jpg'%}" alt="wait" width="300" height="200"
                 /></a>
                 <div class="des">Description if any</div>
               </div>
