--- a/static/css/gallary.css
+++ b/static/css/gallary.css
@@ -10,87 +10,6 @@ h2 {
   text-align: left;
   font-family: poppins;
 }
-.footer-top {
-  background: #170c0c;
-  padding-top: 100px;
-
-  padding-bottom: 0px;
-  padding-left: 5px;
-  margin-top: 60px;
-  margin-right: 40px;
-}
-
-.segment-one {
-  font-family: poppins;
-  font-size: 15px;
-  margin: 10px 0;
-  padding-left: 50px;
-}
-.segment-two h2 {
-  font-family: poppins;
-}
-.segment-two ul {
-  margin: 0px;
-  padding: 0;
-  font-size: 16px;
-  list-style: none;
-  color: white;
-}
-.segment-two ul li {
-  border-bottom: 1px solid #1ee86f;
-  line-height: 40px;
-  font-family: poppins;
-  font-size: 15px;
-}
-.segment-two ul li a {
-  color: white;
-  font-size: 15px;
-  font-family: poppins;
-  text-decoration: none;
-}
-.segment-three h2 {
-  font-family: poppins;
-  font-size: 15px;
-  padding-right: 0;
-  padding-left: 0;
-}
-.segment-three ul {
-  margin: 0;
-  padding: 0;
-  font-family: poppins;
-  font-size: 15px;
-  list-style: none;
-  color: white;
-}
-.segment-four h2 {
-  color: white;
-  font-family: poppins;
-  font-size: 15px;
-  float: center;
-}
-.segment-four h2:before {
-  content: "|";
-  color: #c65039;
-  padding-right: 10px;
-}
-.segment-four p {
-  color: white;
-  font-family: poppins;
-  font-size: 15px;
-}
-.segment-four a {
-  background: #1ee86f;
-  width: 30px;
-  height: 30px;
-  display: inline-block;
-  border-radius: 10px;
-  margin-top: 0px;
-}
-.segment-four a i {
-  font-size: 16px;
-  color: white;
-  padding: 8px 10px;
-}
 * {
   box-sizing: border-box;
 }
@@ -103,15 +22,16 @@ h2 {
   height: auto;
   grid-area: image;
   margin-left: 2px;
+  transition: 0.5s all ease;
 }
 .gallary img:hover {
   transform: scale(1.2);
-  transition: 0.5s ease;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
 }
 .des {
   padding: 15px;
   background: white;
+  z-index: 10;
 }
 
 .sgallary1 {
