--- a/static/css/viewevents.css
+++ b/static/css/viewevents.css
@@ -6,14 +6,6 @@ body {
   font-family: poppins;
   background: #170c0c;
 }
-a {
-  color: black;
-}
-
-a:hover {
-  color: black;
-  text-decoration: none;
-}
 .main {
   margin: 2%;
 }
@@ -32,17 +24,19 @@ h3 {
 }
 
 .card {
+  width: 20%;
+  display: inline-block;
   box-shadow: 2px 2px 20px black;
   border-radius: 5px;
   margin: 2%;
   background-color: #1ee86f;
 }
 .card:hover {
-  transform: scale(1.15);
+  transform: translateY(-5px);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
 }
 .card {
-  transition: 0.5s ease;
+  transition: 0.3s all ease;
   cursor: pointer;
   margin: 30px;
 }
@@ -94,76 +88,9 @@ h4 {
 .don:hover {
   background-color: black;
   color: white;
-  transition: 0.5s;
+  transition: 0.5s all ease;
   cursor: pointer;
   border-color: #ffda15;
-}
-h2 {
-  color: white;
-  font-size: 18px;
-  text-align: left;
-}
-.footer-top {
-  background: #170c0c;
-  padding-top: 100px;
-  padding-bottom: 50px;
-  padding-left: 40px;
-}
-.segment-one {
-  margin: 10px 0;
-  padding-left: 50px;
-}
-.segment-two ul {
-  margin: 0px;
-  padding: 0;
-
-  list-style: none;
-  color: white;
-}
-.segment-two ul li {
-  border-bottom: 1px solid #1ee86f;
-  line-height: 40px;
-}
-.segment-two ul li a {
-  color: white;
-  text-decoration: none;
-}
-.segment-three h2 {
-  padding-right: 0;
-  padding-left: 0;
-}
-.segment-three ul {
-  margin: 0;
-  padding: 0;
-
-  list-style: none;
-  color: white;
-}
-.segment-four h2 {
-  color: white;
-  float: center;
-}
-.segment-four h2:before {
-  content: "|";
-  color: #c65039;
-  padding-right: 10px;
-}
-.segment-four p {
-  color: white;
-  font-size: 18px;
-}
-.segment-four a {
-  background: #1ee86f;
-  width: 30px;
-  height: 30px;
-  display: inline-block;
-  border-radius: 10px;
-  margin-top: 0px;
-}
-.segment-four a i {
-  font-size: 16px;
-  color: white;
-  padding: 8px 10px;
 }
 
 .drop a {
@@ -172,8 +99,14 @@ h2 {
   letter-spacing: 0.5px;
 }
 .page {
-  margin-left: 420px;
 }
 .page a {
   color: black;
+  background-color: #ffda15;
+  border-color: white;
+}
+.page a:hover {
+  color: black;
+  background-color: #ffda15;
+  border-color: white;
 }
