--- a/user/templates/user/footer.html
+++ b/user/templates/user/footer.html
@@ -1,35 +1,39 @@
+{%load static%}
+<link rel="stylesheet" href="{% static 'css/footer.css' %}" />
+
 <footer>
-        <div class="footer-top">
-          <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12 segment-one">
-              <h2>Spread Smiles</h2>
-            </div>
-            <div class="col-md-3 col-sm-6 ctwoxs-12 segment-two">
-              <h2>Links</h2>
-              <ul>
-                <li><a href="/about">What we do</a></li>
-                <li><a href="/signup">Join us</a></li>
-                <li><a href="/gallary">Gallary</a></li>
-                <li><a href="/allevents">Donate</a></li>
-              </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 ctwoxs-12 segment-three">
-              <h2>Contact</h2>
-              <ul>
-                <li>Uttara,Dhaka,Bangladesh</li>
-                <li>01xxxxxxxx</li>
-              </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 ctwoxs-12 segment-four">
-              <h2>Follow us</h2>
-              <p>
-                Follow us on our social media profile in order to keep updated
-                with our recent task
-              </p>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
-          </div>
-        </div>
+  <div class="footer-top">
+    <div class="row">
+      <div class="col-md-3 col-sm-6 col-xs-12 segment-one">
+        <h2>Spread Smiles</h2>
+      </div>
+      <div class="col-md-3 col-sm-6 ctwoxs-12 segment-two">
+        <h2>Links</h2>
+        <ul>
+          <li><a href="/about">What we do</a></li>
+          <li><a href="/signup">Join us</a></li>
+          <li><a href="/gallary">Gallary</a></li>
+          <li><a href="/allevents">Donate</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-sm-6 ctwoxs-12 segment-three">
+        <h2>Contact</h2>
+        <ul>
+          <li>Uttara,Dhaka</li>
+          <li>Bangladesh</li>
+          <li>01xxxxxxxx</li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-sm-6 ctwoxs-12 segment-four">
+        <h2>Follow us</h2>
+        <p>
+          Follow us on our social media profile in order to keep updated with
+          our recent task
+        </p>
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+      </div>
+    </div>
+  </div>
 </footer>
