--- a/user/templates/user/homepage.html
+++ b/user/templates/user/homepage.html
@@ -1,65 +1,83 @@
-{% extends "user/base.html" %}
-{% load static %}
+{% extends "user/base.html" %} 
+{% load static %} 
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/homepage.css' %}" />
-{% endblock css %}
+{% endblock css %} 
 
 {% block content %}
-      <div class="row" style="margin-top: 100px;">
-        <div class="col">
-          <div class="jumbotron">
-            <h1 class="display-4">Spread Smiles</h1>
-            <p class="lead">
-              We are here to help you to find out the right place to contribute
-              so that your contribution can bring smile to some faces
-            </p>
+<div class="row" style="margin-top: 100px;">
+  <div class="col">
+    <div class="jumbotron">
+      <h1 class="display-4">We will help you Find the perfect event to donate.</h1>
+      <p class="lead">
+        SpreadSmiles teame will find the right place to help you contribute so
+        that you can bring smile to some faces.
+      </p>
 
-            <a class="btn ss" href="/allevents"
-              >Lets collaborate to donate</a
-            >
-          </div>
+      <a class="btn ss" href="/allevents">Lets Collaborate to Donate</a>
+    </div>
+  </div>
+
+  <div class="col">
+    <div
+      id="carouselExampleCaptions"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselExampleCaptions"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="{% static 'images/fs.jpg' %}" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block"></div>
         </div>
-        <div class="col pic">
-          <img src="{% static 'images/f.jpg' %}" class="img-fluid" alt="Responsive image" />
+        <div class="carousel-item">
+          <img src="{% static 'images/fs2.jpg' %}" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block"></div>
+        </div>
+        <div class="carousel-item">
+          <img src="{% static 'images/f.jpg' %}" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block"></div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+<br />
 
-      <p class="text-center so">Some events that might interested you!</p>
+<p class="text-center so">Some events that might interested you!</p>
 
-      <div class="main text-center">
-        <div class="row">
-        
-        {% for event in events|slice:":3"  %}
-        
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card">
-          <div class="image">
-            <img src="{% static 'images/g.jpg' %}" alt="Coming soon" />
-          </div>
-          <div class="title">
-            <h1>{{event.event_title}}</h1>
-          </div>
-          <div class="des">
-            <h4>{{event.organization_name}}</h4>
-            <p>{{event.description|slice:":100"}}</p>
-            <a href="/event/{{event.id}}" class="btn btn-primary don"
-              >Details</a
-            >
-          </div>
+<div class="main text-center">
+  <div class="row">
+  {% for event in events|slice:":3"  %}
+    <div class="col-md-4 col-sm-12 col-xs-12">
+      <div class="card" style="width: 16rem;" ;>
+        <div class="image">
+          <img src="{% static 'images/g.jpg' %}" alt="Coming soon" />
         </div>
-          </div>
-        {% endfor %}
+        <div class="title">
+          <h1>{{event.event_title}}</h1>
         </div>
-        
-      
+        <div class="des">
+          <h4>{{event.organization_name}}</h4>
+          <p>{{event.description|slice:":40"}}</p>
+          <a href="/event/{{event.id}}" class="btn btn-primary don">View More</a>
+        </div>
       </div>
+    </div>
+  {% endfor %}
+  </div>
+</div>
 
-      <div class="text-center">
-        <a class="btn cs" href="/allevents" role="button"
-          >View All Events</a
-        >
-      </div>
-
-      
-{% endblock content %}
+<div class="text-center">
+  <a class="btn cs" href="/allevents" role="button">View All Events</a>
+</div>
+{% endblock %}
