--- a/user/templates/user/navbar.html
+++ b/user/templates/user/navbar.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
 <nav class="navbar navbar-expand-md sticky-top">
   <a class="navbar-brand" href="/"
-    ><img class="img-fluid t" src="{% static 'images/a.png'%}" alt=""
+    ><img class="img-fluid t" src="{% static 'images/logo.svg'%}" alt=""
   /></a>
   <button
     class="navbar-toggler"
@@ -17,7 +17,7 @@
   </button>
 
   <div class="collapse navbar-collapse na" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav m-auto">
       <li class="nav-item">
         <a class="nav-link" href="/about"
           >About Us<span class="sr-only">(current)</span></a
@@ -25,9 +25,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/gallary">Gallary</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/register">Join us</a>
       </li>
       <li class="nav-item dropdown">
         <a
@@ -39,7 +36,7 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
-          Donate
+          Donate Now
         </a>
         <div class="dropdown-menu drop" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/allevents">Money</a>
@@ -51,9 +48,27 @@
         </div>
       </li>
     </ul>
+    {% if request.user.is_authenticated %}
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a
+          class="btn btn-warning ss dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+        >{{request.user}}</a>
+        <div class="dropdown-menu drop" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="">Update Profile</a>
+          <a class="dropdown-item" href="/logout">Logout</a>
+
+        </div>
+      </li>
+    </ul>
+    {% else %}
+      <a href="/register" class="btn btn-warning ss mr-0">Join Us</a>
+    {% endif %}
   </div>
-  {% if request.user.is_authenticated %}
-    <span class="z mr-2">Hello, {{request.user}}</span>
-    <span class="z"><a href="/logout">Logout</a></span>
-  {% endif %}
 </nav>
