--- a/user/templates/user/registration.html
+++ b/user/templates/user/registration.html
@@ -1,169 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+{% extends "user/base.html" %} 
+{% load static %} 
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/registration.css' %}" />
+{% endblock css %} 
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="css/registration.css" />
-    <title>Sign In</title>
-  </head>
-  <body>
-    <div class="container">
-      <nav class="navbar navbar-expand-lg nav">
-        <div class="collapse navbar-collapse na" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">What we do</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="gallary.html">Gallary</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="signup.html">Join us</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-              >
-                Donate
-              </a>
-              <div class="dropdown-menu drop" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="donatebelongings.html">
-                  Belongings</a
-                >
-
-                <div class="drop"></div>
-                <a class="dropdown-item" href="donatemoney.html">Money</a>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="cont">
-        <div class="form sign-in">
-          <h5>Sign In</h5>
-          <label>
-            <span>Email Address</span>
-            <input type="email" name="email" />
-          </label>
-          <label>
-            <span>Password</span>
-            <input type="password" name="password" />
-          </label>
-          <div class="sin">
-            <a href="viewevents.html"
-              ><button class="submit" type="button">Sign In</button></a
-            >
-            <a href="#"><p class="forgot-pass">Forgot Password ?</p></a>
-          </div>
-          <div class="social-media">
-            <ul>
-              <a href="#"
-                ><li><img src="images/facebook.png" /></li
-              ></a>
-              <a href=""
-                ><li><img src="images/twitter.png" /></li
-              ></a>
-              <a href="#"
-                ><li><img src="images/linkedin.png" /></li
-              ></a>
-              <a href="#"
-                ><li><img src="images/instagram.png" /></li
-              ></a>
-            </ul>
-          </div>
-          <div class="ig">
-            <div class="im">
-              <br /><br />
-              <div class="img-text m-up">
-                <h3>New here?</h3>
-                <p>Sign up & discover great amount of new opportunities!</p>
-              </div>
-              <div class="text-center align-items-center">
-                <a class="cs" href="#" role="button">Sign Up</a>
-              </div>
-            </div>
-          </div>
-        </div>
+{% block content %}
+<div class="mains">
+  <div class="main">
+    <div class="form">
+      <h4>Sign Up Here</h4>
+      <div class="input-box">
+        {{form.username}}
       </div>
+      <div class="input-box">
+        {{form.email}}
+      </div>
+      <div class="input-box">
+        {{form.password1}}
+        <div class="invalid-feedback">This Password is not Safe</div>
+      </div>
+      <div class="input-box">
+        {{form.password2}}
+        <div class="invalid-feedback">Passwords not matching</div>
+      </div>
+      <div class="input-box">
+        <input type="submit" value="Sign Up">
+      </div>
+      <br />
 
-      <footer>
-        <div class="footer-top">
-          <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12 segment-one">
-              <h2>Spread Smiles</h2>
-            </div>
-            <div class="col-md-3 col-sm-6 ctwoxs-12 segment-two">
-              <h2>Links</h2>
-              <ul>
-                <li><a href="about.html">What we do</a></li>
-                <li><a href="signup.html">Join us</a></li>
-                <li><a href="gallary.html">Gallary</a></li>
-                <li><a href="viewevents.html">Donate</a></li>
-              </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 ctwoxs-12 segment-three">
-              <h2>Contact</h2>
-              <ul>
-                <li>Uttara,Dhaka,Bangladesh</li>
-                <li>01xxxxxxxx</li>
-              </ul>
-            </div>
-            <div class="col-md-3 col-sm-6 ctwoxs-12 segment-four">
-              <h2>Follow us</h2>
-              <p>
-                Follow us on our social media profile in order to keep updated
-                with our recent task
-              </p>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
-          </div>
-        </div>
-      </footer>
+      <a href="/login" class="sb"><p>One of us? just Sign-In!</p></a>
+      <div class="social-media">
+        <ul>
+          <a href="#"
+            ><li><img class="wr" src="{% static 'images/facebook.png'%}" /></li
+          ></a>
+          <a href=""
+            ><li><img src="{% static 'images/twitter.png'%}" /></li
+          ></a>
+          <a href="#"
+            ><li><img src="{% static 'images/linkedin.png' %}" /></li
+          ></a>
+        </ul>
+      </div>
     </div>
-    <script
-      src="https://kit.fontawesome.com/832cd3cad9.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+  </div>
+</div>
+
+<br />
+{% endblock content %}
