--- a/user/templates/user/viewevents.html
+++ b/user/templates/user/viewevents.html
@@ -1,50 +1,47 @@
-{% extends "user/base.html" %}
+{% extends "user/base.html" %} 
 {% load static %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/viewevents.css' %}" />
-{% endblock css %}
+{% endblock css %} 
 
 {% block content %}
-      <br />
-      <h3>Pay a visit to all the events here</h3>
-      <div class="main text-center">
-        <div class="row">
-        {% for event in events  %}
-        
-          <div class="col-lg-4 col-md-6 col-sm-12">
-          <a href="{% url 'event' event.id %}">
-            <div class="card">
-          <div class="image">
-            <img src="{% static 'images/g.jpg' %}" alt="Coming soon" />
-          </div>
-          <div class="title">
-            <h1>{{event.event_title}}</h1>
-          </div>
-          <div class="des">
-            <h4>{{event.organization_name}}</h4>
-            <p>{{event.description|slice:":100"}}</p>
-            <a href="{% url 'event' event.id %}" class="btn btn-primary don"
-              >Details</a
-            >
-          </div>
-          </a>
+<br />
+<h3>Pay a visit to all the events here</h3>
+<div class="main text-center">
+  <div class="row">
+    {% for event in events %}
+    <div class="col-md-4 col-sm-12 col-xs-12">
+      <div class="card" style="width: 16rem;" ;>
+        <div class="image">
+          <img src="{% static 'images/g.jpg' %}" alt="Coming soon" />
         </div>
-          </div>
-          {% endfor %}
-          </div>
-      </div>  
-      <div class="page">
-        <nav aria-label="Page navigation example">
-          <ul class="pagination">
-            <li class="page-item">
-              <a class="page-link" href="#">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-          </ul>
-        </nav>
+        <div class="title">
+          <h1>{{event.event_title}}</h1>
+        </div>
+        <div class="des">
+          <h4>{{event.organization_name}}</h4>
+          <p>{{event.description|slice:":40"}}</p>
+          <a href="/event/{{event.id}}" class="btn btn-primary don"
+            >View More</a
+          >
+        </div>
       </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+<div class="page">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <li class="page-item">
+        <a class="page-link" href="#">Previous</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+  </nav>
+</div>
 {% endblock content %}
