--- a/user/templates/user/footer.html
+++ b/user/templates/user/footer.html
@@ -8,7 +8,7 @@
         <h2>Spread Smiles</h2>
       </div>
       <div class="col-md-3 col-sm-6 ctwoxs-12 segment-two">
-        <h2>Links</h2>
+        <h2>Site Navigation</h2>
         <ul>
           <li><a href="/about">What we do</a></li>
           <li><a href="/signup">Join us</a></li>
