--- a/user/templates/user/homepage.html
+++ b/user/templates/user/homepage.html
@@ -9,10 +9,10 @@
 <div class="row" style="margin-top: 100px;">
   <div class="col">
     <div class="jumbotron">
-      <h1 class="display-4">We will help you Find the perfect event to donate.</h1>
+      <h1 class="display-4">We will help you Find the perfect event to donate</h1>
       <p class="lead">
         SpreadSmiles teame will find the right place to help you contribute so
-        that you can bring smile to some faces.
+        that you can bring smile to some faces
       </p>
 
       <a class="btn ss" href="/allevents">Lets Collaborate to Donate</a>
