--- a/user/templates/user/registration.html
+++ b/user/templates/user/registration.html
@@ -33,7 +33,7 @@
       <div class="social-media">
         <ul>
           <a href="#"
-            ><li><img class="wr" src="{% static 'images/facebook.png'%}" /></li
+            ><li><img class="wr" src="{% static 'images/facebook.svg'%}" /></li
           ></a>
           <a href=""
             ><li><img src="{% static 'images/twitter.png'%}" /></li
