--- a/user/templates/user/about.html
+++ b/user/templates/user/about.html
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="col">
           <div class="jumbotron">
-            <h1 class="display-4">About Us</h1>
+            <h1 class="display-4">What we do</h1>
             <br>
             <p class="lead">
               This platform is necessary when the people are interested to
