--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -50,12 +50,14 @@ h2 {
   border-radius: 10px;
   border-color: black;
   margin-top: 20px;
+  transition: 0.3s all ease;
 }
 
 .cs:hover {
   color: white;
+  transform: translateY(-3px);
   background-color: black;
-  border-color: #ffda15;
+  border: 2px solid #ffda15;
 }
 .ss {
   border-radius: 10px;
@@ -83,24 +85,21 @@ h2 {
   border-color: #ffda15;
 }
 .card {
-  width: 20%;
+  width: 16rem;
   display: inline-block;
   box-shadow: 2px 2px 20px black;
   border-radius: 5px;
-  margin: 2%;
   background-color: #1ee86f;
-  transition: 0.3s all ease;
+  transition: 0.5s all ease;
+  cursor: pointer;
+  margin: 30px;
+  padding: 5px;
 }
 .card:hover {
   transform: translateY(-5px);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
 }
 
-.card {
-  transition: 0.5s ease;
-  cursor: pointer;
-  margin: 30px;
-}
 .title {
   text-align: center;
   padding: 10px;
@@ -128,15 +127,13 @@ h4 {
 .image {
   background-size: cover;
   grid-area: image;
-
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  height: 163px;
+  overflow: hidden;
+  border-radius: 8px;
 }
 
 .image img {
   width: 100%;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
 }
 img {
   border-radius: 8px;
