--- a/user/templates/user/eventdet.html
+++ b/user/templates/user/eventdet.html
@@ -1,65 +1,105 @@
-{% extends "user/base.html" %}
-{% load static %}
-
-{% block css %}
+{% extends "user/base.html" %} {% load static %} {% block css %}
 <link rel="stylesheet" href="{% static 'css/eventdet.css' %}" />
-{% endblock css %}
-
-{% block content %}
-<br>
-   <div class="row">
-        <div class="col">
-          <div class="jumbotron">
-            <h1 class="display-4">{{event.event_title}}</h1>
-            <p class="lead">
-              {{event.description}}
-            </p>
-            <hr class="my-4" />
-
-            
-          </div>
-        </div>
-
-        <div class="col pic">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class=" img-fluid d-block w-100 new" src="{% static 'images/f.jpg' %}" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="img-fluid d-block w-100 new" src="{% static 'images/f.jpg' %}" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class=" img-fluid d-block w-100 new" src="{% static 'images/f.jpg' %}" alt="Third slide">
+{% endblock css %} {% block content %}
+<br />
+<div class="row mb-5">
+  <div class="col">
+    <div class="jumbotron">
+      <h1 class="display-4">{{event.event_title}}</h1>
+      <p class="lead">
+        {{event.description}}
+      </p>
+      <hr class="my-4" />
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+
+  <div class="col pic">
+    <div
+      id="carouselExampleControls"
+      class="carousel slide"
+      data-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="img-fluid d-block w-100 new"
+            src="{{event.cover.url}}"
+            alt="First slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="img-fluid d-block w-100 new"
+            src="{% static 'images/fs.jpg' %}"
+            alt="Second slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="img-fluid d-block w-100 new"
+            src="{% static 'images/fs2.jpg' %}"
+            alt="Third slide"
+          />
         </div>
       </div>
-      <h1 class="display-3">Event Progress</h1><br>
-     <p class="lead sr">Donors</p>
-      <div class="progress "style="height:25px;">
-  <div class="progress-bar progress-bar-striped bg-info progress-bar-animated" style="width: {{donators_count}}0%" >{{donators_count}}</div>
-</div> <br>
-<p class="lead sr">Raised</p>
-<div class="progress" style="height:25px;">
-  <div class="progress-bar progress-bar-striped bg-warning progress-bar-animated" style="width: {{raised_p}}%" >{{raised}}/{{event.goal}}</div>
-</div><br><p class="lead sr">Goal</p>
-    <div class="progress" style="height:25px;">
-  <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" style="width: 100%" >{{event.goal}}</div>
+      <a
+        class="carousel-control-prev"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 </div>
-     <br><br> <div class="text-center">
-         <a class="btn ss btn-lg" href="/donatemoney/{{event.id}}" role="button"
-              >Donate Now</a
-            >
-     </div>
-      
+<h1 class="display-3">Event Progress</h1>
+<br />
+<p class="lead sr">Donors</p>
+<div class="progress" style="height: 25px;">
+  <div
+    class="progress-bar progress-bar-striped bg-info progress-bar-animated"
+    style="width: {{donators_count}}0%"
+  >
+    {{donators_count}}
+  </div>
+</div>
+<br />
+<p class="lead sr">Raised</p>
+<div class="progress" style="height: 25px;">
+  <div
+    class="progress-bar progress-bar-striped bg-warning progress-bar-animated"
+    style="width: {{raised_p}}%"
+  >
+    {{raised}}/{{event.goal}}
+  </div>
+</div>
+<br />
+<p class="lead sr">Goal</p>
+<div class="progress" style="height: 25px;">
+  <div
+    class="progress-bar progress-bar-striped bg-success progress-bar-animated"
+    role="progressbar"
+    style="width: 100%;"
+  >
+    {{event.goal}}
+  </div>
+</div>
+<br /><br />
+<div class="text-center">
+  <a class="btn ss btn-lg" href="/donatemoney/{{event.id}}" role="button"
+    >Donate Now</a
+  >
+</div>
+
 {% endblock content %}
